Perkin-UAT/force-app/main/default/objects/Notification_Center_HTML_Home_Page__c/Notification_Center_HTML_Home_Page__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Notification Center HTML Home Page</label>
</CustomObject>