Perkin-UAT/force-app/main/default/objects/Notification_Center_HTML_Home_Page__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>TextArea</type>
</CustomField>