Perkin-UAT/force-app/main/default/objects/Notification_Center_HTML_Home_Page__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Background_Color__c</columns>
    <columns>Color__c</columns>
    <columns>Display_Text__c</columns>
    <columns>Mail_To__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>